--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -134,7 +134,7 @@
   position: fixed;
   z-index: 1;
   color: black;
-  right: 37%;
+  left: 37%;
   top: 43%;
   transform: translate(-50%, -50%);
   background-color: #fefefe;
