--- a/src/components/ButtonInfo/Scroll/Scroll.module.scss
+++ b/src/components/ButtonInfo/Scroll/Scroll.module.scss
@@ -131,7 +131,7 @@
   position: fixed;
   z-index: 1;
   color: black;
-  mid: 37%;
+  left: 37%;
   top: 43%;
   transform: translate(-50%, -50%);
   background-color: #fefefe;
