--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -32,7 +32,6 @@
 }
 
 .mouseBody {
-
   width: 40vw;
   height: auto;
   margin: 0 auto;
@@ -41,8 +40,10 @@
 .fnaticW {
   @include fluid-text(12, 19);
   color: white;
+  margin-bottom: 15px;
 }
 .fnaticW2 {
+  margin-bottom: 15px;
   @include fluid-text(12, 19);
   color: black;
 }
@@ -65,6 +66,7 @@ button {
 
 .textWhite {
   @include textBW;
+  
   color: white;
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4);
   background-color: rgb(37, 37, 37);
@@ -85,5 +87,4 @@ button {
 }
 
 h4 {
-
 }
